# todo

./: .envrc  .gitignore  .travis.yml  ChangeLog.md  LICENSE  Makefile  README.md  cabal.project  config-example.yaml  default.nix  devenv.nix  devenv.yaml  flake.nix  package.yaml  stack.yaml  static.nix  todo.cabal
.github/workflows/: ci.yaml
android/: .gitignore  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/schemas/com.denibertovic.todo.app.data.db.TodoDatabase/: 1.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/denibertovic/todo/app/: MainActivity.kt  TodoApplication.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/data/: ExportRepository.kt  Mapping.kt  RegistrationRepository.kt  SyncRepository.kt  TodoActions.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/data/db/: DeviceStateDao.kt  Entities.kt  ItemCacheDao.kt  OperationDao.kt  TodoDatabase.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/data/net/: SyncApi.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/sync/: SyncScheduler.kt  SyncWorkers.kt  TodoWorkerFactory.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/ui/: TodoNavHost.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/ui/edit/: EditScreen.kt  EditViewModel.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/ui/list/: ListScreen.kt  ListViewModel.kt  SwipeableRow.kt  TodoItemContent.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/ui/onboarding/: OnboardingScreen.kt  OnboardingViewModel.kt  QrScanner.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/kotlin/com/denibertovic/todo/app/ui/theme/: TodoColors.kt
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
android/core/: build.gradle.kts
android/core/src/main/kotlin/com/denibertovic/todo/core/crdt/: Crdt.kt  LWWRegister.kt  Operation.kt  SyncApiTypes.kt  SyncState.kt
android/core/src/main/kotlin/com/denibertovic/todo/core/json/: Serializers.kt
android/core/src/main/kotlin/com/denibertovic/todo/core/parser/: Parser.kt
android/core/src/main/kotlin/com/denibertovic/todo/core/types/: Ids.kt  Renderer.kt  Types.kt
android/core/src/test/kotlin/com/denibertovic/todo/core/crdt/: CrdtTest.kt
android/core/src/test/kotlin/com/denibertovic/todo/core/parser/: ParserTest.kt
android/core/src/test/kotlin/com/denibertovic/todo/core/types/: HaskellFixtureTest.kt  JsonTest.kt  RendererTest.kt
android/core/src/test/resources/fixtures/: add-op-from-haskell-server.json
android/gradle/: libs.versions.toml
app/: Main.hs
completions/: _todo
nixos/: home-manager.nix  module.nix
src/Todo/: Lib.hs  Options.hs  Parser.hs  QrRenderer.hs  Types.hs
src/Todo/Sync/: CRDT.hs  Client.hs  Daemon.hs  Store.hs  Types.hs
test/Test/: QrRendererSpec.hs
test/Test/Lib/: LibSpec.hs
test/Test/Parser/: ParserSpec.hs
test/Test/Sync/: CRDTSpec.hs  StoreSpec.hs  TypesSpec.hs
todo-sync-server/: todo-sync-server.cabal
todo-sync-server/app/: Main.hs
todo-sync-server/src/: Database.hs  Middleware.hs  Server.hs  Types.hs
todo-sync-server/test/Test/: DatabaseSpec.hs  MiddlewareSpec.hs  ServerSpec.hs
