cabal-version: 2.4

name:           todo
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/denibertovic/todo#readme>
homepage:       https://github.com/denibertovic/todo#readme
bug-reports:    https://github.com/denibertovic/todo/issues
author:         Deni Bertovic
maintainer:     deni@denibertovic.com
copyright:      2018 Deni Bertovic
license:        LGPL-3.0-only
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/denibertovic/todo

library
  hs-source-dirs:
      src
  default-extensions:
      NoImplicitPrelude
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , forge
    , ilist
    , optparse-applicative
    , parsec
    , pretty-simple
    , rainbow
    , rio
    , temporary
    , text
    , time
    , unordered-containers
    , vector
    , yaml
  exposed-modules:
      Todo.Lib
      Todo.Options
      Todo.Parser
      Todo.Types
  other-modules:
      Paths_todo
  default-language: Haskell2010

executable todo
  main-is: Main.hs
  hs-source-dirs:
      app
  default-extensions:
      NoImplicitPrelude
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , forge
    , ilist
    , optparse-applicative
    , parsec
    , pretty-simple
    , rainbow
    , rio
    , temporary
    , text
    , time
    , todo
    , unordered-containers
    , vector
    , yaml
  other-modules:
      Paths_todo
  default-language: Haskell2010

test-suite todo-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  default-extensions:
      NoImplicitPrelude
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , forge
    , hspec
    , ilist
    , optparse-applicative
    , parsec
    , pretty-simple
    , rainbow
    , rio
    , temporary
    , text
    , time
    , todo
    , unordered-containers
    , vector
    , yaml
  other-modules:
      Test.Lib.LibSpec
      Test.Parser.ParserSpec
      Paths_todo
  default-language: Haskell2010
